# course_svo

./: .gitignore  LICENSE  README.md  docker-compose.yml
extra_shared/: requirements.txt  subs.py
robot_ws_data/: debug.txt  readme.md
robot_ws_data/install/: local_setup.sh  setup.sh
robot_ws_data/install/customdata_publisher/share/customdata_publisher/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_ws_data/install/customdata_publisher/share/customdata_publisher/cmake/: customdata_publisherConfig-version.cmake  customdata_publisherConfig.cmake
robot_ws_data/install/customdata_publisher/share/customdata_publisher/environment/: ament_prefix_path.dsv  path.dsv
robot_ws_data/install/customdata_publisher/share/customdata_publisher/launch/: customdata_launch.py
robot_ws_data/install/euroc_image_publisher/share/euroc_image_publisher/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_ws_data/install/kitti_image_publisher/share/kitti_image_publisher/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
robot_ws_data/install/ubicoders_svo/share/ubicoders_svo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_ws_data/log/: latest_build
robot_ws_data/src/euroc_image_publisher/src/: euroc_image_publisher_node.cpp
robot_ws_data/src/kitti_image_publisher/src/: kitti_image_publisher_node.cpp
robot_ws_data/src/ubicoders_svo/include/svo/: config.hpp  stereo_geometry.hpp
robot_ws_data/src/ubicoders_svo/src/: stereo_geometry.cpp  svo_node.cpp
robot_ws_vrobots/: .gitignore  readme.md
robot_ws_vrobots/install/: local_setup.sh  setup.sh
robot_ws_vrobots/install/ubicoders_svo/share/ubicoders_svo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
robot_ws_vrobots/install/ubicoders_svo_rerun/share/ubicoders_svo_rerun/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_ws_vrobots/install/vrobots_ros2_bridge/share/vrobots_ros2_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_ws_vrobots/install/vrobots_ros2_controller/share/vrobots_ros2_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_ws_vrobots/install/vrobots_ros2_msg/share/vrobots_ros2_msg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_ws_vrobots/log/: latest_build
robot_ws_vrobots/src/ubicoders_svo/: CMakeLists.txt  package.xml
robot_ws_vrobots/src/ubicoders_svo/include/svo/: config.hpp  frontend.hpp  svo_node.hpp  viewer.hpp
robot_ws_vrobots/src/ubicoders_svo/src/: frontend.cpp  svo_node.cpp  viewer.cpp
robot_ws_vrobots/src/ubicoders_svo_rerun/: CMakeLists.txt  package.xml
robot_ws_vrobots/src/ubicoders_svo_rerun/src/: rerun_node.cpp
robot_ws_vrobots/src/vrobots_ros2_bridge/: CMakeLists.txt  package.xml
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/: commands_converter.hpp  message_data.hpp  states_converter.hpp
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/C000_commands/: C000_commands_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/EMPT_empty/: EMPT_empty_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/M100_mission/: M100_mission_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/R000_states/: R000_states_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/R001_states_drone1d/: R001_states_drone1d_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/S000_srv_resetallmsg/: S000_srv_resetallmsg_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/S001_srv_globalparamsmsg/: S001_srv_globalparamsmsg_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/S002_srv_wsparamsmsg/: S002_srv_wsparamsmsg_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/S003_srv_simparamsmsg/: S003_srv_simparamsmsg_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/S004_srv_omrwallmsg/: S004_srv_omrwallmsg_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/S005_srv_drone1dpidmsg/: S005_srv_drone1dpidmsg_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/S006_srv_imureplaymsg/: S006_srv_imureplaymsg_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/S007_srv_vrobotphysicalpropertymsg/: S007_srv_vrobotphysicalpropertymsg_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/include/vrobots_ros2_bridge/collision/: collision_generated.h
robot_ws_vrobots/src/vrobots_ros2_bridge/launch/: bridge.launch.py
robot_ws_vrobots/src/vrobots_ros2_bridge/src/: bridge_node.cpp  cam_bridge_node.cpp  cmd_bridge_node.cpp  states_converter.cpp
robot_ws_vrobots/src/vrobots_ros2_controller/: CMakeLists.txt  package.xml
robot_ws_vrobots/src/vrobots_ros2_controller/include/vrobots_ros2_controller/: command_helper.hpp
robot_ws_vrobots/src/vrobots_ros2_controller/src/: controller_node.cpp
robot_ws_vrobots/src/vrobots_ros2_msg/: CMakeLists.txt  package.xml
robot_ws_vrobots/src/vrobots_ros2_msg/msg/: Collision.msg  Commands.msg  States.msg
wsl_only/: install_cargo.bash  install_wsl_graphics.bash  install_wsl_rerun.bash
(+166 files in other folders)
